--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
@@ -4,7 +4,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:sharedControl="using:Shared.Control"
     mc:Ignorable="d">
+	<Page.Resources>
+	
+	</Page.Resources>
 
     <Grid>
         <!--buttons-->
@@ -22,5 +26,10 @@
             <Button Grid.Row="1" Grid.Column="0" Content="精品屋" Width="120" Height="120" Margin="20" Background="Salmon" Click="boutique_Click"/>
             <Button Grid.Row="1" Grid.Column="1" Content="更多功能" Width="120" Height="120" Margin="20" Background="SeaGreen" Click="more_Click"/>
         </Grid>
+        
+        <sharedControl:ImageSwitch VerticalAlignment="Bottom" Width="100" 
+                                   CheckStateChanged="ImageSwitch_CheckStateChanged"
+                                   Enabled="True"/>
+
     </Grid>
 </Page>
