--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Style/AppStyles.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Style/AppStyles.xaml
@@ -83,7 +83,7 @@
                             <Grid x:Name="unCheckedPanel">
                                 <Image x:Name="unCheckedImage" Source="{TemplateBinding UnCheckedImage}" Stretch="Uniform" Margin="{TemplateBinding Padding}"/>
                             </Grid>
-                            <Grid x:Name="knob" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+                            <Grid x:Name="knob" IsHitTestVisible="False" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
                                 <Grid.RenderTransform>
                                     <CompositeTransform/>
                                 </Grid.RenderTransform>
@@ -102,8 +102,8 @@
         <Setter Property="CheckedImage" Value="/Assets/ImageSwitch/SwitchShow.png"/>
         <Setter Property="UnCheckedImage" Value="/Assets/ImageSwitch/SwitchHide.png"/>
         <Setter Property="DisabledCheckedImage" Value="/Assets/ImageSwitch/SwitchDisabledShow.png"/>
-        <Setter Property="Height" Value="60"/>
-        <Setter Property="Width" Value="120"/>
+        <Setter Property="Height" Value="40"/>
+        <Setter Property="Width" Value="80"/>
     </Style>
 
     <!--boutique page-->
