--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/MyThemeDetailPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/MyThemeDetailPage.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:MeiTuTieTie.Controls" 
     xmlns:util="using:Shared.Utility"
+    xmlns:sharedControl="using:Shared.Control"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -32,6 +33,11 @@
                                    util:IsoImg.Path="{Binding thumbnail}"
                                    Height="72" Width="72" Margin="5"/>
                             <TextBlock Grid.Column="1" Text="{Binding image}" Style="{StaticResource ThemeDetailPage_SubTitle_Style}"/>
+                            <sharedControl:ImageSwitch Grid.Column="4"
+                                                       Checked="{Binding visible}"
+                                                       VerticalAlignment="Center"
+                                                       CheckStateChanged="ImageSwitch_CheckStateChanged"/>
+
                         </Grid>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
