--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
@@ -26,7 +26,10 @@
             </ItemsControl.ItemTemplate>
         </ListBox>
         <Button Content="PickPhoto" Click="PickPhoto_Click" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="12,0,12,0"/>
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom">
+            <Button Content="Widget" Click="Widget_Click" />
+            <Button Content="OK" Click="OK_Click" />
+        </StackPanel>
 
-        <Button Content="OK" Click="OK_Click" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Margin="12,0,12,0"/>
     </Grid>
 </Page>
