--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
@@ -8,6 +8,9 @@
     mc:Ignorable="d">
 	<Page.Resources>
 	
+	
+	
+	
 	</Page.Resources>
 
     <Grid>
@@ -29,10 +32,11 @@
             <Button Grid.Row="1" Grid.Column="0" Content="精品屋" Width="120" Height="120" Margin="20" Background="Salmon" Click="boutique_Click"/>
             <Button Grid.Row="1" Grid.Column="1" Content="更多功能" Width="120" Height="120" Margin="20" Background="SeaGreen" Click="more_Click"/>
         </Grid>
-        
-        <sharedControl:ImageSwitch x:Name="imageSwitch" VerticalAlignment="Bottom"
+
+        <!--<sharedControl:ImageSwitch x:Name="imageSwitch" VerticalAlignment="Bottom"
                                    CheckStateChanged="ImageSwitch_CheckStateChanged"
-                                   Enabled="True"/>
+                                   Enabled="True"/>-->
+        
 
     </Grid>
 </Page>
